--- a/view/home/circulo-beta.html
+++ b/view/home/circulo-beta.html
@@ -23,7 +23,6 @@
         <li><span class="menu__item" id="acesores">Asesores</span></li>
         <li><span class="menu__item">Ajustes</span></li>
       </ul>
-      <div class="menu-login login-btt">Inicia sesion</div>
     </div>
     <div class="everything">
       <div class="everything__child navigation">
@@ -31,7 +30,6 @@
               <img src="images/lupa.svg" alt="Lupa" class="navigation__icon-search">
           </label>
           <input class="navigation__search" id="search" type="text" placeholder="Ingrse su busqueda">
-          <div class="nav-login login-btt">Inicia sesion</div>
       </div>
       <div class="everything__child content">
         <div class="back-top"></div>
@@ -42,19 +40,14 @@
         </div>
         <div class="circulo-info">
           <div class="info-left">
-            <div class="circulo-titulo">Titulo</div>
-            <div class="circulo-autor">By author</div>
+            <div class="circulo-titulo">Tics</div>
+            <div class="circulo-autor">By Marco Antonio</div>
           </div>
           <div class="info-mid">
             <div class="circulo-descripcion">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-              Eum laudantium neque alias deserunt suscipit nobis unde 
-              modi nemo, soluta, reiciendis quam explicabo commodi 
-              aspernatur placeat, quis voluptatem. Nemo, molestias itaque.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Delectus voluptas explicabo ea rerum, quod similique ad 
-              optio earum deleniti. Iure deserunt sint quos officiis qui 
-              veniam corrupti nesciunt eligendi repellendus.
+              En este circulo se tratan los temas de la materia tics, desde los temas mas basicos como
+              las hojas de calculo y programas de ofimatica hasta estructuras de datos. Soy 
+              Marco Antonio y soy Asesor de este circulo.
             </div>
           </div>
           <div class="info-right">
@@ -62,20 +55,10 @@
           </div>
         </div>
         <div class="articulo">
-          <div class="articulo-titulo">Articulo 1</div>
+          <div class="articulo-titulo">Introduccion a funciones en Exel</div>
           <div class="articulo-info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Nam consectetur minus adipisci quod ipsa deleniti labore
-            eligendi maxime earum amet, ab vitae impedit repudiandae 
-            temporibus laborum, aut, nemo in nisi?
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Quis eum voluptatum nesciunt dolores quae quam repellendus? 
-            In voluptatem voluptatum modi cumque quas id dolore quae, 
-            amet asperiores error, a tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Numquam enim non ipsam eligendi et nulla commodi quidem 
-            atque unde eaque beatae maxime quod nihil voluptas aliquid 
-            eos blanditiis, exercitationem natus.
+            Adjunto los documentos que utilizamos en la clase del 20/03/2023 como siempre y el <a href="#">Link</a>
+            gracias por el apoyo :3
           </div>
           <div class="articulo-docs">
             <div class="doc">
@@ -117,20 +100,9 @@
           </div>
         </div>
         <div class="articulo">
-          <div class="articulo-titulo">Articulo 2</div>
+          <div class="articulo-titulo">Estilos a documento Word</div>
           <div class="articulo-info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Nam consectetur minus adipisci quod ipsa deleniti labore
-            eligendi maxime earum amet, ab vitae impedit repudiandae 
-            temporibus laborum, aut, nemo in nisi?
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Quis eum voluptatum nesciunt dolores quae quam repellendus? 
-            In voluptatem voluptatum modi cumque quas id dolore quae, 
-            amet asperiores error, a tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Numquam enim non ipsam eligendi et nulla commodi quidem 
-            atque unde eaque beatae maxime quod nihil voluptas aliquid 
-            eos blanditiis, exercitationem natus.
+            Adjunto los documentos que utilizamos en la clase del 16/03/2023 junto con su <a href="#">Link</a>
           </div>
           <div class="articulo-docs">
             <div class="doc">
