--- a/view/home/circulos.html
+++ b/view/home/circulos.html
@@ -15,14 +15,14 @@
 		<span></span>
 	</div>
 	<div class="menu">
-      <img class="menu__icon" src="images/C.png" alt="El loguito no cargó :(" id="logo">
+      <img class="menu__icon" src="images/C.png" alt="El loguito no cargó :(">
 		<div class="linea"></div>
 		<ul class="menu__modulos">
-            <li><span class="menu__item" id="circulos">Circulos</span></li>
-            <li><span class="menu__item" id="post" >Post</span></li>
-            <li><span class="menu__item">Preguntas</span></li>
-            <li><span class="menu__item" id="acesores">Asesores</span></li>
-            <li><span class="menu__item">Ajustes</span></li>
+			<li><span class="menu__item" id="circulos">Circulos</span></li>
+			<li><span class="menu__item">Post</span></li>
+			<li><span class="menu__item">Preguntas</span></li>
+			<li><span class="menu__item" id="acesores">Asesores</span></li>
+			<li><span class="menu__item">Ajustes</span></li>
 		</ul>
 	</div>
 	<div class="everything">
