--- a/view/home/Acesores.html
+++ b/view/home/Acesores.html
@@ -23,7 +23,6 @@
       <li><span class="menu__item" id="acesores">Asesores</span></li>
       <li><span class="menu__item">Ajustes</span></li>
     </ul>
-    <div class="menu-login login-btt">Inicia sesion</div>
   </div>
   <div class="everything">
     <div class="everything__child navigation">
@@ -31,7 +30,6 @@
             <img src="images/lupa.svg" alt="Lupa" class="navigation__icon-search">
         </label>
         <input class="navigation__search" id="search" type="text" placeholder="Ingrse su busqueda">
-        <div class="nav-login login-btt">Inicia sesion</div>
     </div>
     <div class="everything__child content">
       <div class="pos">
@@ -49,9 +47,9 @@
                   <div class="card-info-name">Alexis Torres</div>
                   <div class="card-info-biotitle">Biografia</div>
                   <div class="card-info-bio">
-                    Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit Est sed tenetur dolor
-                    eaque iust perspiciatis quibusdam vero eos
+                    Soy alumno del 430-A en la carrera de Programacion,
+                    he participado en mulptiples concursos de Programacion,
+                    por lo que me propuse ayudar a mis compañeros con lo que me gusta.
                   </div>
                 </div>
                 <div class="card-info-right">
@@ -81,8 +79,8 @@
                 <div class="bcard-stitle">Contacto</div>
               </div>
               <div class="bcard-redes">
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">452-252-2437</div>
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">452-252-2437</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">452-123-4567</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">452-123-4567</div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-gmail.svg" alt="phone"><a href="#">alex@gmail.com</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-google-cloud.svg" alt="phone"><a href="#">drive.example/folder</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bx-video.svg" alt="phone"><a href="#">meet.sesion</a></div>
