--- a/view/home/circulos.html
+++ b/view/home/circulos.html
@@ -49,7 +49,7 @@
                 <p class="desc">En este curso aprenderas  las bases de la programación, múltiples lenguajes de programación tanto como algoritmos básicos y avanzados
 				</p>
                 <p class="read-more">
-                    <a class="readMore" href="http://localhost/login/view/home/circulo-beta.html">Marco Antonio <i class="sin"></i></a>
+                    <a class="readMore" href="./circulo-beta.html">Marco Antonio <i class="sin"></i></a>
                 </p>
             </div>
 
