--- a/view/home/Acesores.html
+++ b/view/home/Acesores.html
@@ -79,8 +79,8 @@
                 <div class="bcard-stitle">Contacto</div>
               </div>
               <div class="bcard-redes">
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">452-123-4567</div>
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">452-123-4567</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">452-252-24-37</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">452-252-24-37</div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-gmail.svg" alt="phone"><a href="#">alex@gmail.com</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-google-cloud.svg" alt="phone"><a href="#">drive.example/folder</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bx-video.svg" alt="phone"><a href="#">meet.sesion</a></div>
