--- a/view/home/Acesores.html
+++ b/view/home/Acesores.html
@@ -44,27 +44,28 @@
               </div>
               <div class="card-info">
                 <div class="card-info-left">
-                  <div class="card-info-name">Alexis Torres</div>
+                  <div class="card-info-name">Ernesto Molina</div>
                   <div class="card-info-biotitle">Biografia</div>
                   <div class="card-info-bio">
-                    Soy alumno del 430-A en la carrera de Programacion,
-                    he participado en mulptiples concursos de Programacion,
-                    por lo que me propuse ayudar a mis compañeros con lo que me gusta.
+                    Un desarrollador front-end con 8 años de 
+                    experiencia en busca de nuevos retos,
+                    experiencia en el mercado de adversiting y 
+                    landing proyects
                   </div>
                 </div>
                 <div class="card-info-right">
                   <div class="card-info-data">
                     <div class="data">
                       <b>Escuela:</b>
-                      Cecytem 20 Uruapan
+                      ITSUR
                     </div>
                     <div class="data">
                       <b>Grupo:</b>
-                      430-A
+                      780-C
                     </div>
                     <div class="data">
-                      <b>Especialidad:</b>
-                      Programacion
+                      <b>Carrera:</b>
+                      Ingenieria en software
                     </div>
                   </div>
                 </div>
@@ -75,13 +76,13 @@
             </div>
             <div class="back">
               <div class="bcard-title">
-                <div class="bcard-ftitle">Alexis Torres</div>
+                <div class="bcard-ftitle">Ernesto Molina</div>
                 <div class="bcard-stitle">Contacto</div>
               </div>
               <div class="bcard-redes">
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">452-123-4567</div>
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">452-123-4567</div>
-                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-gmail.svg" alt="phone"><a href="#">alex@gmail.com</a></div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxs-phone.svg" alt="phone">778-245-4532</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-whatsapp.svg" alt="phone">778-245-4532</div>
+                <div class="bcard-red"><img class="bcard-icon" src="images/bxl-gmail.svg" alt="phone"><a href="#">ErneM87@gmail.com</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-google-cloud.svg" alt="phone"><a href="#">drive.example/folder</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bx-video.svg" alt="phone"><a href="#">meet.sesion</a></div>
                 <div class="bcard-red"><img class="bcard-icon" src="images/bxl-discord-alt.svg" alt="phone">#user</div>
